--- a/style.css
+++ b/style.css
@@ -284,4 +284,19 @@ footer a:hover {
     .form-group button {
         width: 100%;
     }
+
+    h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 3rem;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+h1 .initial {
+    font-size: 4.5rem;
+    font-weight: bold;
+    vertical-align: top;
+    line-height: 1;
+}
+
 }
